# frontend

./: .gitignore  app.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
pages/: 1_firstpage.py  chat.py  firstpage.py
