[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Shiwon Park <psw041115@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
streamlit = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
